# nus-deep-learning

./: .gitignore  pyproject.toml
Baseline/: integrated_pipeline.py  network_choice.md  train_cnn.py  train_cnn_v2.py
Baseline/deploy/: Dockerfile  README.md  __init__.py  client.py  demo.py  docker-compose.yml  inference.py  requirements.txt  server.py  tcp_client.py  tcp_server.py
Baseline/deprecated/: collect_random_images.py  evaluate_cnn.py  relay_server.py  train_resnet18.py
Baseline/image_collector/: collect_cat_images.py
Baseline/offline_test/: receiver.py  tcp_client.py
Baseline/prompt/: baseline_prompt.md  fitting_judgement.md  identify_troubleshoot.md  image_collection.md  image_obscuring.md  image_preresize.md  network_choice_cn.md  robot_model_integration.md  train_gen.md
Notes/: Lec1.md  Lec2.md  Lec3.md  Lec4.md
Project/: analysis.md  car_control.ino  car_control_tracking.ino  car_control_tracking_obs.ino  car_patrol.py  hardware_list.md  member_task_assignments.md  newrun.ino  plan.md  project_execution_plan.md  voice_transmission_server.py  voice_transmission_server_panns.py  ws_car_control.py  ws_car_control_V1_1.py  ws_car_control_V1_2.py  ws_car_control_V1_3.py  ws_car_control_v1.py
Project/camera_binding/: calib_camera_server.py  calib_transfer.py  raspberry_pi_aruco.py  visual_binding.py
Project/cry_detect/: voice_transmission_server_panns.py
Project/deprecated/: car_control.ino  car_control_v2.ino  implementation_plan.md  newrun.ino  pid_anomaly_analysis.md  plan.md  (+3 more)
card_detecter/: card_detector.py  config.py  hand_detector.py  main.py  request_manager.py  request_mapping.py  robot_controller.py  state_machine.py  task_queue.py
vision_side/: hand_detector.py  main.py  readme.md  requirements.txt  robot_controller.py  state_machine.py  test_pose_realtime.py
(+100 files in other folders)
