[project]
name = "nus-deep-learning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "albumentations>=1.3.0",
    "onnxruntime-gpu>=1.15.0",
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt>=8.6.0",
    "onnx-graphsurgeon>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = { find = { include = ["cat_recognition*", "Project*"] } }
