[project]
name = "nus-deep-learning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "albumentations>=1.3.0",
    "onnxruntime-gpu>=1.15.0",
    "onnx>=1.15.0",
    "onnxscript>=0.1.0",
    "tensorboard>=2.13.0",
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    # PyTorch CUDA 版（GPU 训练支持）。
    # 注意：PyPI 上的 torch 是 CPU-only 版本，必须指定 PyTorch 官方 CUDA 仓库安装：
    #   pip uninstall torch torchvision torchaudio -y
    #   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126
    # Driver 支持 CUDA 12.8，向下兼容 cu126 构建；安装后 torch.cuda.is_available() 应为 True。
    "torch>=2.12.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.12.0",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt>=8.6.0",
    "onnx-graphsurgeon>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = { find = { include = ["cat_recognition*", "Project*"] } }
